--- a/ML/scikit/03 - Decision Trees.ipynb
+++ b/ML/scikit/03 - Decision Trees.ipynb
@@ -17,7 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris = load_iris()"
+    "iris = load_iris()\n",
+    "print(iris.feature_names)\n",
+    "print(iris.data[:10])"
    ]
   },
   {
@@ -27,7 +29,7 @@
    "outputs": [],
    "source": [
     "# http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn.tree.DecisionTreeClassifier\n",
-    "clf = tree.DecisionTreeClassifier(max_depth=2)\n",
+    "clf = tree.DecisionTreeClassifier(max_depth=3)\n",
     "clf = clf.fit(iris.data, iris.target)"
    ]
   },
@@ -89,26 +91,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Display feature importance\n",
+    "print(clf.feature_importances_)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
