--- a/ML/scikit/02 - Logistic Regression.ipynb
+++ b/ML/scikit/02 - Logistic Regression.ipynb
@@ -2,73 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
     "from sklearn import metrics\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150, 4)\n",
-      "[[5.1 3.5 1.4 0.2]\n",
-      " [4.9 3.  1.4 0.2]\n",
-      " [4.7 3.2 1.3 0.2]\n",
-      " [4.6 3.1 1.5 0.2]\n",
-      " [5.  3.6 1.4 0.2]\n",
-      " [5.4 3.9 1.7 0.4]\n",
-      " [4.6 3.4 1.4 0.3]\n",
-      " [5.  3.4 1.5 0.2]\n",
-      " [4.4 2.9 1.4 0.2]\n",
-      " [4.9 3.1 1.5 0.1]]\n",
-      "(150,)\n",
-      "[0 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the iris dataset (1936!)- https://archive.ics.uci.edu/ml/datasets/iris\n",
     "# 150 samples for 3 different types of irises (Setosa, Versicolour and Virginica)\n",
     "# The rows are the samples and the columns are: Sepal Length, Sepal Width, Petal Length and Petal Width.\n",
-    "dataset = datasets.load_iris()\n",
+    "iris = datasets.load_iris()\n",
     "\n",
-    "print(dataset.data.shape)\n",
-    "print(dataset.data[:10])\n",
-    "print(dataset.target.shape)\n",
-    "print(dataset.target[:10])"
+    "print(iris.data.shape)\n",
+    "print(iris.data[:10])\n",
+    "print(iris.target.shape)\n",
+    "print(iris.target[:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['irismodel.pkl']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Split the data set into training and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        iris.data, iris.target,\n",
+    "        test_size=0.33, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Fit a logistic regression model to the data\n",
     "# http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
     "model = LogisticRegression(solver='liblinear', multi_class='ovr')\n",
-    "model.fit(dataset.data, dataset.target)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
     "# Save model for future use\n",
     "from sklearn.externals import joblib\n",
@@ -77,35 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict\n",
-    "expected = dataset.target\n",
-    "predicted = model.predict(dataset.data)"
+    "expected = y_test\n",
+    "predicted = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       1.00      1.00      1.00        50\n",
-      "          1       0.98      0.90      0.94        50\n",
-      "          2       0.91      0.98      0.94        50\n",
-      "\n",
-      "avg / total       0.96      0.96      0.96       150\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display metrics\n",
     "# Precision measures the impact of false positives: TP/(TP+FP)\n",
@@ -116,19 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[50  0  0]\n",
-      " [ 0 45  5]\n",
-      " [ 0  1 49]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display confusion matrix\n",
     "print(metrics.confusion_matrix(expected, predicted))"
@@ -144,21 +101,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
