--- a/ML/scikit/03a - Random Forest.ipynb
+++ b/ML/scikit/03a - Random Forest.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn import tree, ensemble, metrics\n",
     "from sklearn.datasets import load_iris\n",
-    "from sklearn import tree, metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "import graphviz"
    ]
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn.tree.DecisionTreeClassifier\n",
-    "clf = tree.DecisionTreeClassifier(max_depth=3)\n",
+    "clf = ensemble.RandomForestClassifier(n_estimators=10, max_depth=3)\n",
     "clf = clf.fit(X_train, y_train)"
    ]
   },
@@ -52,11 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dot_data = tree.export_graphviz(clf, out_file=None) \n",
+    "# Plot one of the trees\n",
+    "tree_number = 1\n",
+    "\n",
+    "dot_data = tree.export_graphviz(clf.estimators_[tree_number], out_file=None) \n",
     "graph = graphviz.Source(dot_data) \n",
     "graph.render(\"iris\") \n",
     "\n",
-    "dot_data = tree.export_graphviz(clf, out_file=None, \n",
+    "dot_data = tree.export_graphviz(clf.estimators_[tree_number], out_file=None, \n",
     "                         feature_names=iris.feature_names,  \n",
     "                         class_names=iris.target_names,  \n",
     "                         filled=True, rounded=True,  \n",
