--- a/ML/scikit/03b - XGBoost.ipynb
+++ b/ML/scikit/03b - XGBoost.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris\n",
     "from sklearn import tree, metrics\n",
+    "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from xgboost import XGBClassifier\n",
     "import graphviz"
    ]
   },
@@ -42,7 +43,7 @@
    "outputs": [],
    "source": [
     "# http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn.tree.DecisionTreeClassifier\n",
-    "clf = tree.DecisionTreeClassifier(max_depth=3)\n",
+    "clf = XGBClassifier()\n",
     "clf = clf.fit(X_train, y_train)"
    ]
   },
@@ -52,11 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dot_data = tree.export_graphviz(clf, out_file=None) \n",
+    "# Plot one of the trees\n",
+    "tree_number = 1\n",
+    "\n",
+    "dot_data = tree.export_graphviz(clf.estimators_[tree_number], out_file=None) \n",
     "graph = graphviz.Source(dot_data) \n",
     "graph.render(\"iris\") \n",
     "\n",
-    "dot_data = tree.export_graphviz(clf, out_file=None, \n",
+    "dot_data = tree.export_graphviz(clf.estimators_[tree_number], out_file=None, \n",
     "                         feature_names=iris.feature_names,  \n",
     "                         class_names=iris.target_names,  \n",
     "                         filled=True, rounded=True,  \n",
@@ -108,13 +112,6 @@
     "# Display feature importance\n",
     "print(clf.feature_importances_)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
