Train with all features and compare training times

--- a/ML/scikit/05a - PCA + Logistic Regression on MNIST.ipynb
+++ b/ML/scikit/05a - PCA + Logistic Regression on MNIST.ipynb
@@ -35,6 +35,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logisticRegr = LogisticRegression(solver='lbfgs', multi_class='multinomial', \n",
+    "                                  verbose=1, max_iter=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "logisticRegr.fit(mnist_images, mnist_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predictions = logisticRegr.predict(mnist_test_images)\n",
+    "score = logisticRegr.score(mnist_test_images,mnist_test_labels)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
     "pca = PCA(n_components=64)\n",
@@ -51,10 +84,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "logisticRegr = LogisticRegression(solver='lbfgs', multi_class='multinomial', \n",
-    "                                  verbose=1, max_iter=500)\n",
+    "                                  verbose=1, max_iter=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "logisticRegr.fit(mnist_images_pca, mnist_labels)"
    ]
   },
@@ -64,7 +104,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = logisticRegr.predict(mnist_test_images_pca)\n",
+    "score = logisticRegr.score(mnist_test_images_pca,mnist_test_labels)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=32)\n",
+    "mnist_images_pca = pca.fit(mnist_images).transform(mnist_images)\n",
+    "mnist_test_images_pca = pca.transform(mnist_test_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "logisticRegr.fit(mnist_images_pca, mnist_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "score = logisticRegr.score(mnist_test_images_pca,mnist_test_labels)\n",
     "print(score)"
    ]
