--- a/ML/scikit/03b - XGBoost.ipynb
+++ b/ML/scikit/03b - XGBoost.ipynb
@@ -6,11 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install xgboost --upgrade\n",
+    "!pip install graphviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn import tree, metrics\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from xgboost import XGBClassifier\n",
-    "import graphviz"
+    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -53,20 +62,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot one of the trees\n",
-    "tree_number = 1\n",
+    "from xgboost import plot_tree\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "dot_data = tree.export_graphviz(clf.estimators_[tree_number], out_file=None) \n",
-    "graph = graphviz.Source(dot_data) \n",
-    "graph.render(\"iris\") \n",
+    "plot_tree(clf, num_trees=0)\n",
+    "plot_tree(clf, num_trees=1)\n",
+    "plot_tree(clf, num_trees=2)\n",
     "\n",
-    "dot_data = tree.export_graphviz(clf.estimators_[tree_number], out_file=None, \n",
-    "                         feature_names=iris.feature_names,  \n",
-    "                         class_names=iris.target_names,  \n",
-    "                         filled=True, rounded=True,  \n",
-    "                         special_characters=True)  \n",
-    "graph = graphviz.Source(dot_data)  \n",
-    "graph"
+    "plt.show()"
    ]
   },
   {
@@ -112,25 +115,39 @@
     "# Display feature importance\n",
     "print(clf.feature_importances_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
