Fixed joblib deprecation warning

--- a/ML/scikit/01 - Linear Regression.ipynb
+++ b/ML/scikit/01 - Linear Regression.ipynb
@@ -61,7 +61,7 @@
     "regr.fit(X_train, Y_train)\n",
     "\n",
     "# Save model for future use\n",
-    "from sklearn.externals import joblib\n",
+    "import joblib\n",
     "joblib.dump(regr, 'linearregressionmodel.pkl')"
    ]
   },
