Fix joblib deprecation warning

--- a/ML/scikit/02 - Logistic Regression.ipynb
+++ b/ML/scikit/02 - Logistic Regression.ipynb
@@ -53,7 +53,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Save model for future use\n",
-    "from sklearn.externals import joblib\n",
+    "import joblib\n",
     "joblib.dump(model, 'irismodel.pkl')"
    ]
   },
